[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "accountant"
dependencies = [
	"numpy",
	"pandas",
	"python-dotenv",
	"pytest-playwright",
	"questionary",
	"scipy",
	"sqlalchemy",
	"textract-py3",
]

[tool.ruff]
line-length = 160
